--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -107,7 +107,8 @@
                         ?>
                         <tr>
                             <td class="py-2">
-                                <a href="#" class="id-donasi text-primary font-weight-bolder">
+                                <a href="#" class="id-donasi text-primary font-weight-bolder"
+                                    data-id="<?= $listDonasi->id_donasi; ?>">
                                     <?= $listDonasi->id_donasi; ?>
                                 </a><span class="font-weight-bolder" <?=(!empty($listDonasi->warna) ? ' style="color: '
                                     . $listDonasi->warna . '"' : '') ?>>
@@ -486,3 +487,29 @@
         </div>
     </div>
 </div>
+<!-- Toast -->
+<?php if (Session::exists('toast')) {
+    $toast = Session::flash('toast');
+    ?>
+<div aria-live="polite" aria-atomic="true" style="bottom: 1em; right: 1em; z-index: 10;"
+    class="position-fixed d-flex justify-content-end flex-column align-items-end">
+    <div class="toast w-100 fade hide bg-white" role="alert" aria-live="assertive" aria-atomic="true"
+        data-toast="feedback" data-delay="5000" data-toast-run="true">
+        <div class="toast-header d-flex gap-x-2 justify-content-center align-items-center">
+            <div
+                class="small-box rounded p-2 ailgn-items-center <?= ($toast['error'] == true ? 'bg-danger' : 'bg-success') ?>">
+            </div>
+            <strong class="mr-auto">Pemberitahuan</strong>
+            <small class="text-muted time-passed">Beberapa saat yang lalu</small>
+            <button type="button" class="close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            <?= $toast['feedback']['message']; ?>
+        </div>
+    </div>
+</div>
+<?php
+}
+?>
