memperbaiki bug pada highlight dan menambahkan fungsi get data donasi, memperbaiki init pada datepicker agar lebih efisien dan membuat hasil date terpilih menjadi format ISO yang dari format lokal

--- a/app/views/admin/donasi/buat.html
+++ b/app/views/admin/donasi/buat.html
@@ -198,7 +198,8 @@
                                 <i class="ni ni-bell-55 ni-3x"></i>
                                 <h2 class="heading mt-4">Anda harus baca ini!</h2>
                                 <p class="font-weight-light">Anda akan menambah data donasi untuk bantuan yang sudah
-                                    <span class="font-weight-bolder">di Take Down !!</span>
+                                    <span class="d-inline-block">di <span class="font-weight-bold text-secondary">Take
+                                            Down !!</span></span>
                                 </p>
                                 <a data-id="" target="_blank"
                                     class="font-weight-bolder text-underline badge badge-primary p-2 bg-primary text-white"
