--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -477,10 +477,10 @@
                             <div
                                 class="border-0 card-header bg-transparent justify-content-between d-flex align-items-center">
                                 <h1 class="display-4 mb-0 text-orange font-weight-bolder">Kwitansi Donasi</h1>
-                                <a href="#">
+                                <div class="item">
                                     <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
                                         class="img-fluid">
-                                </a>
+                                </div>
                             </div>
                             <div class="card-body d-flex flex-column gap-y-4">
                                 <div class="box rounded-box bg-orange text-white" id="kwitansi-note">
