--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="col-auto text-end">
                             <small>
-                                <?= ($list_bantuan->sisa_waktu != 'Unlimited' ? $list_bantuan->sisa_waktu.' hari lagi' : $list_bantuan->sisa_waktu) ?>
+                                <?= $list_bantuan->sisa_waktu; ?>
                             </small>
                         </div>
                     </div>
