menambahkan fitur cetak kwitansi pada donatur di beranda tinggal di tagihan paid belum, menambahkan kolumn id_tanda_tangan ke pegawai fk ke gambar

--- a/public/assets/main/css/kwitansi.css
+++ b/public/assets/main/css/kwitansi.css
@@ -14,7 +14,7 @@
     content: '#';
 }
 
-#kwitansi img {
+#kwitansi img:not(.signature) {
     width: 60px;
 }
 
@@ -35,6 +35,10 @@
 
 #kwitansi #signature {
     background-image: url("/assets/images/brand/patern-pojok-berbagi-horizontal.png");
+}
+
+#kwitansi #alias::after {
+    content: 'Pojok Berbagi';
 }
 
 @media print {
