--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -550,9 +550,18 @@
                                     </div>
                                     <div class="col-6">
                                         <div class="row" style="height: 100%;">
-                                            <div class="col d-flex align-items-end justify-content-center">
-                                                <div id="signature"></div>
-                                                <h4 class="mb-0">CR Pojok Berbagi</h4>
+                                            <div class="col d-flex align-items-end justify-content-between flex-column">
+                                                <div id="signature">
+                                                    <img src="" alt="" class="img-fluid signature">
+                                                </div>
+                                                <div id="pengesah">
+                                                    <p id="nama-pengesah" class="mb-0 text-capitalize">
+                                                        <?= ucwords(strtolower($data['pegawai']->nama)); ?>
+                                                    </p>
+                                                    <h4 class="mb-0 gap-x-1 d-flex align-items-end" id="alias">
+                                                        <?= $data['admin_alias']; ?>
+                                                    </h4>
+                                                </div>
                                             </div>
                                             <div class="col d-flex align-items-center justify-content-end"
                                                 id="canvas-qr">
