mengubah file kwitansi.css di main dengan menambahkan print-color-adjust: exact;

--- a/public/assets/main/css/kwitansi.css
+++ b/public/assets/main/css/kwitansi.css
@@ -59,6 +59,7 @@
 
     body {
         -webkit-print-color-adjust: exact !important;
+        print-color-adjust: exact !important;
         /* margin: 0px 2em !important; */
     }
 
